--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8330,3 +8330,22 @@ a[data-toggle="collapse"] {
 
 .subscribe-form .form-control {
   background: #4897fc; }
+
+  .loader-wrapper {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: rgba(255, 255, 255, 0.7); /* Slightly transparent background */
+      backdrop-filter: blur(0.5px); /* Blurs the background */
+      z-index: 9999; /* Make sure the loader stays on top of everything */
+  }
+
+  .loader-wrapper img {
+      width: 100px;
+      height: 100px;
+  }
